--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <header>
       <nav id="navbar">
         <ul>
-          <li><a href="#home"><i class="fa-solid fa-house"></i>home</a></li>
-          <li><a href="#informacion"><i class="fa-solid fa-info"></i>Acerca de Mi</a></li>
-          <li><a href="#formacion "><i class="fa-solid fa-user-graduate"></i>Formacion</a></li>
-          <li><a href="#contactos"><i class="fa-solid fa-globe"></i>Contacto</a></li>
-          <li><a href="CV falso.pdf"><i class="fa-solid fa-download"></i>Descarga CV</a></li>
+          <li><i class="fa-solid fa-house"></i><a href="#home">home</a></li>
+          <li><i class="fa-solid fa-info"></i><a href="#informacion">Acerca de Mi</a></li>
+          <li><i class="fa-solid fa-user-graduate"></i><a href="#formacion ">Formacion</a></li>
+          <li><i class="fa-solid fa-globe"></i><a href="#contactos">Contacto</a></li>
+          <li><i class="fa-solid fa-download"></i><a href="/1_HTML/CV falso.pdf">Descarga CV</a></li>
         </ul>
       </nav>
     </header>
