--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <header>
       <nav id="navbar">
         <ul>
-          <li><i class="fa-solid fa-house"></i><a href="#home">home</a></li>
-          <li><i class="fa-solid fa-info"></i><a href="#informacion">Acerca de Mi</a></li>
-          <li><i class="fa-solid fa-user-graduate"></i><a href="#formacion ">Formacion</a></li>
-          <li><i class="fa-solid fa-globe"></i><a href="#contactos">Contacto</a></li>
-          <li><i class="fa-solid fa-download"></i><a href="/1_HTML/CV falso.pdf">Descarga CV</a></li>
+          <li><a href="#home"><i class="fa-solid fa-house"></i></a><a id="link_home" href="#home">home</a></li>
+          <li><a href="#informacion"><i class="fa-solid fa-info"></i></a><a id="link_info" href="#informacion">Acerca de Mi</a></li>
+          <li><a href="#formacion"><i class="fa-solid fa-user-graduate"></i></a><a id="link_forma" href="#formacion ">Formacion</a></li>
+          <li><a href="#contactos"><i class="fa-solid fa-globe"></i></a><a id="link_cont" href="#contactos">Contacto</a></li>
+          <li><a href="CV falso.pdf"><i class="fa-solid fa-download"></i></a><a id="link_cv" href="CV falso.pdf">Descarga CV</a></li>
         </ul>
       </nav>
     </header>
